ANTLRparser/src/gen/GrammarParser.java
// Generated from C:/MyProgram/MethodsOfTranslation/ANTLRparser/src\Grammar.g4 by ANTLR 4.7
package gen;

import java.io.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, WORD=31, NUM=32, 
		BOOL=33, ORD=34, WS=35;
	public static final int
		RULE_start = 0, RULE_pack = 1, RULE_imp = 2, RULE_clas = 3, RULE_inclas = 4, 
		RULE_type = 5, RULE_voidtype = 6, RULE_var = 7, RULE_expr = 8, RULE_field = 9, 
		RULE_method = 10, RULE_code = 11, RULE_iff = 12, RULE_whil = 13, RULE_ret = 14, 
		RULE_inttype = 15, RULE_intr = 16, RULE_intexpr = 17, RULE_intterm = 18, 
		RULE_intvalue = 19, RULE_plus = 20, RULE_mul = 21, RULE_unminus = 22, 
		RULE_booltype = 23, RULE_boolr = 24, RULE_boolexpr = 25, RULE_boolterm = 26, 
		RULE_boolvalue = 27, RULE_or = 28, RULE_and = 29, RULE_nl = 30, RULE_sp = 31, 
		RULE_semi = 32, RULE_words = 33, RULE_seq = 34, RULE_seq2 = 35, RULE_mod = 36, 
		RULE_ex = 37, RULE_st = 38, RULE_word = 39, RULE_num = 40, RULE_bool = 41, 
		RULE_ord = 42, RULE_lb = 43, RULE_rb = 44, RULE_lp = 45, RULE_rp = 46, 
		RULE_tabs = 47;
	public static final String[] ruleNames = {
		"start", "pack", "imp", "clas", "inclas", "type", "voidtype", "var", "expr", 
		"field", "method", "code", "iff", "whil", "ret", "inttype", "intr", "intexpr", 
		"intterm", "intvalue", "plus", "mul", "unminus", "booltype", "boolr", 
		"boolexpr", "boolterm", "boolvalue", "or", "and", "nl", "sp", "semi", 
		"words", "seq", "seq2", "mod", "ex", "st", "word", "num", "bool", "ord", 
		"lb", "rb", "lp", "rp", "tabs"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'package'", "'import'", "'.*'", "'class'", "'void'", "'throws'", 
		"'if'", "'else'", "'while'", "'return'", "'int'", "'='", "'+'", "'*'", 
		"'-'", "'boolean'", "'||'", "'&&'", "';'", "'.'", "','", "'public'", "'private'", 
		"'extends'", "'implements'", "'static'", "'('", "')'", "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "WORD", "NUM", "BOOL", "ORD", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	PrintWriter w;
	{
	    try {
	        w = new PrintWriter("Output.java");
	    } catch (Exception e) {}
	}

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public NlContext nl() {
			return getRuleContext(NlContext.class,0);
		}
		public PackContext pack() {
			return getRuleContext(PackContext.class,0);
		}
		public List<ImpContext> imp() {
			return getRuleContexts(ImpContext.class);
		}
		public ImpContext imp(int i) {
			return getRuleContext(ImpContext.class,i);
		}
		public List<ClasContext> clas() {
			return getRuleContexts(ClasContext.class);
		}
		public ClasContext clas(int i) {
			return getRuleContext(ClasContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(96);
				pack();
				}
			}

			setState(99);
			nl();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(100);
				imp();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__21) | (1L << T__22))) != 0)) {
				{
				{
				setState(106);
				clas(0);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			w.close();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackContext extends ParserRuleContext {
		public SeqContext seq() {
			return getRuleContext(SeqContext.class,0);
		}
		public SemiContext semi() {
			return getRuleContext(SemiContext.class,0);
		}
		public NlContext nl() {
			return getRuleContext(NlContext.class,0);
		}
		public PackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pack; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterPack(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitPack(this);
		}
	}

	public final PackContext pack() throws RecognitionException {
		PackContext _localctx = new PackContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pack);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__0);
			w.print("package ");
			setState(116);
			seq();
			setState(117);
			semi();
			setState(118);
			nl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImpContext extends ParserRuleContext {
		public SeqContext seq() {
			return getRuleContext(SeqContext.class,0);
		}
		public SemiContext semi() {
			return getRuleContext(SemiContext.class,0);
		}
		public NlContext nl() {
			return getRuleContext(NlContext.class,0);
		}
		public ImpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterImp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitImp(this);
		}
	}

	public final ImpContext imp() throws RecognitionException {
		ImpContext _localctx = new ImpContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_imp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__1);
			w.print("import ");
			setState(122);
			seq();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(123);
				match(T__2);
				w.print(".*");
				}
			}

			setState(127);
			semi();
			setState(128);
			nl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClasContext extends ParserRuleContext {
		public int n;
		public List<NlContext> nl() {
			return getRuleContexts(NlContext.class);
		}
		public NlContext nl(int i) {
			return getRuleContext(NlContext.class,i);
		}
		public List<TabsContext> tabs() {
			return getRuleContexts(TabsContext.class);
		}
		public TabsContext tabs(int i) {
			return getRuleContext(TabsContext.class,i);
		}
		public WordsContext words() {
			return getRuleContext(WordsContext.class,0);
		}
		public LpContext lp() {
			return getRuleContext(LpContext.class,0);
		}
		public InclasContext inclas() {
			return getRuleContext(InclasContext.class,0);
		}
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public ModContext mod() {
			return getRuleContext(ModContext.class,0);
		}
		public ExContext ex() {
			return getRuleContext(ExContext.class,0);
		}
		public ClasContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ClasContext(ParserRuleContext parent, int invokingState, int n) {
			super(parent, invokingState);
			this.n = n;
		}
		@Override public int getRuleIndex() { return RULE_clas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterClas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitClas(this);
		}
	}

	public final ClasContext clas(int n) throws RecognitionException {
		ClasContext _localctx = new ClasContext(_ctx, getState(), n);
		enterRule(_localctx, 6, RULE_clas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			nl();
			setState(131);
			tabs(n);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__21 || _la==T__22) {
				{
				setState(132);
				mod();
				}
			}

			setState(135);
			match(T__3);
			w.print("class ");
			setState(137);
			words();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__23 || _la==T__24) {
				{
				setState(138);
				ex();
				}
			}

			setState(141);
			lp();
			setState(142);
			nl();
			setState(143);
			inclas(n + 1);
			setState(144);
			tabs(n);
			setState(145);
			rp();
			setState(146);
			nl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InclasContext extends ParserRuleContext {
		public int n;
		public List<TabsContext> tabs() {
			return getRuleContexts(TabsContext.class);
		}
		public TabsContext tabs(int i) {
			return getRuleContext(TabsContext.class,i);
		}
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public List<MethodContext> method() {
			return getRuleContexts(MethodContext.class);
		}
		public MethodContext method(int i) {
			return getRuleContext(MethodContext.class,i);
		}
		public InclasContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public InclasContext(ParserRuleContext parent, int invokingState, int n) {
			super(parent, invokingState);
			this.n = n;
		}
		@Override public int getRuleIndex() { return RULE_inclas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterInclas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitInclas(this);
		}
	}

	public final InclasContext inclas(int n) throws RecognitionException {
		InclasContext _localctx = new InclasContext(_ctx, getState(), n);
		enterRule(_localctx, 8, RULE_inclas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__10) | (1L << T__15) | (1L << T__21) | (1L << T__22) | (1L << T__25))) != 0)) {
				{
				setState(152);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(148);
					tabs(n);
					setState(149);
					field();
					}
					break;
				case 2:
					{
					setState(151);
					method(n);
					}
					break;
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public InttypeContext inttype() {
			return getRuleContext(InttypeContext.class,0);
		}
		public BooltypeContext booltype() {
			return getRuleContext(BooltypeContext.class,0);
		}
		public VoidtypeContext voidtype() {
			return getRuleContext(VoidtypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		try {
			setState(160);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				inttype();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				booltype();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(159);
				voidtype();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VoidtypeContext extends ParserRuleContext {
		public VoidtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voidtype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterVoidtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitVoidtype(this);
		}
	}

	public final VoidtypeContext voidtype() throws RecognitionException {
		VoidtypeContext _localctx = new VoidtypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_voidtype);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(T__4);
			w.print("void ");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public SemiContext semi() {
			return getRuleContext(SemiContext.class,0);
		}
		public NlContext nl() {
			return getRuleContext(NlContext.class,0);
		}
		public InttypeContext inttype() {
			return getRuleContext(InttypeContext.class,0);
		}
		public WordContext word() {
			return getRuleContext(WordContext.class,0);
		}
		public BooltypeContext booltype() {
			return getRuleContext(BooltypeContext.class,0);
		}
		public IntrContext intr() {
			return getRuleContext(IntrContext.class,0);
		}
		public BoolrContext boolr() {
			return getRuleContext(BoolrContext.class,0);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitVar(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				{
				setState(165);
				inttype();
				setState(166);
				word();
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__11) {
					{
					setState(167);
					intr();
					}
				}

				}
				break;
			case T__15:
				{
				setState(170);
				booltype();
				setState(171);
				word();
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__11) {
					{
					setState(172);
					boolr();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(177);
			semi();
			setState(178);
			nl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public WordContext word() {
			return getRuleContext(WordContext.class,0);
		}
		public SemiContext semi() {
			return getRuleContext(SemiContext.class,0);
		}
		public NlContext nl() {
			return getRuleContext(NlContext.class,0);
		}
		public IntrContext intr() {
			return getRuleContext(IntrContext.class,0);
		}
		public BoolrContext boolr() {
			return getRuleContext(BoolrContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			word();
			setState(183);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(181);
				intr();
				}
				break;
			case 2:
				{
				setState(182);
				boolr();
				}
				break;
			}
			setState(185);
			semi();
			setState(186);
			nl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public ModContext mod() {
			return getRuleContext(ModContext.class,0);
		}
		public StContext st() {
			return getRuleContext(StContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitField(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_field);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__21 || _la==T__22) {
				{
				setState(188);
				mod();
				}
			}

			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__25) {
				{
				setState(191);
				st();
				}
			}

			setState(194);
			var();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public int n;
		public List<NlContext> nl() {
			return getRuleContexts(NlContext.class);
		}
		public NlContext nl(int i) {
			return getRuleContext(NlContext.class,i);
		}
		public List<TabsContext> tabs() {
			return getRuleContexts(TabsContext.class);
		}
		public TabsContext tabs(int i) {
			return getRuleContext(TabsContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public WordContext word() {
			return getRuleContext(WordContext.class,0);
		}
		public LbContext lb() {
			return getRuleContext(LbContext.class,0);
		}
		public RbContext rb() {
			return getRuleContext(RbContext.class,0);
		}
		public SpContext sp() {
			return getRuleContext(SpContext.class,0);
		}
		public LpContext lp() {
			return getRuleContext(LpContext.class,0);
		}
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public ModContext mod() {
			return getRuleContext(ModContext.class,0);
		}
		public StContext st() {
			return getRuleContext(StContext.class,0);
		}
		public Seq2Context seq2() {
			return getRuleContext(Seq2Context.class,0);
		}
		public WordsContext words() {
			return getRuleContext(WordsContext.class,0);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public MethodContext(ParserRuleContext parent, int invokingState, int n) {
			super(parent, invokingState);
			this.n = n;
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitMethod(this);
		}
	}

	public final MethodContext method(int n) throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState(), n);
		enterRule(_localctx, 20, RULE_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			nl();
			setState(197);
			tabs(n);
			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__21 || _la==T__22) {
				{
				setState(198);
				mod();
				}
			}

			setState(202);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__25) {
				{
				setState(201);
				st();
				}
			}

			setState(204);
			type();
			setState(205);
			word();
			setState(206);
			lb();
			setState(208);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10 || _la==T__15) {
				{
				setState(207);
				seq2();
				}
			}

			setState(210);
			rb();
			setState(211);
			sp();
			setState(215);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(212);
				match(T__5);
				w.print("throws ");
				setState(214);
				words();
				}
			}

			setState(217);
			lp();
			setState(218);
			nl();
			setState(219);
			code(n + 1);
			setState(220);
			tabs(n);
			setState(221);
			rp();
			setState(222);
			nl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeContext extends ParserRuleContext {
		public int n;
		public List<TabsContext> tabs() {
			return getRuleContexts(TabsContext.class);
		}
		public TabsContext tabs(int i) {
			return getRuleContext(TabsContext.class,i);
		}
		public RetContext ret() {
			return getRuleContext(RetContext.class,0);
		}
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<IffContext> iff() {
			return getRuleContexts(IffContext.class);
		}
		public IffContext iff(int i) {
			return getRuleContext(IffContext.class,i);
		}
		public List<WhilContext> whil() {
			return getRuleContexts(WhilContext.class);
		}
		public WhilContext whil(int i) {
			return getRuleContext(WhilContext.class,i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public CodeContext(ParserRuleContext parent, int invokingState, int n) {
			super(parent, invokingState);
			this.n = n;
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitCode(this);
		}
	}

	public final CodeContext code(int n) throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState(), n);
		enterRule(_localctx, 22, RULE_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(233);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__8) | (1L << T__10) | (1L << T__15) | (1L << WORD))) != 0)) {
				{
				{
				setState(224);
				tabs(n);
				setState(229);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__10:
				case T__15:
					{
					setState(225);
					var();
					}
					break;
				case WORD:
					{
					setState(226);
					expr();
					}
					break;
				case T__6:
					{
					setState(227);
					iff(n);
					}
					break;
				case T__8:
					{
					setState(228);
					whil(n);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(235);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(237);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(236);
				ret(n);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
